// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TableRenderer > handles empty rows 1`] = `
"
┌──────┬──────┬────────┐
│ Name │ Role │ Status │
├──────┼──────┼────────┤
└──────┴──────┴────────┘
"
`;

exports[`TableRenderer > handles markdown content in cells 1`] = `
"
┌───────┬──────────┬────────┐
│ Name  │ Role     │ Status │
├───────┼──────────┼────────┤
│ Alice │ Engineer │ Active │
└───────┴──────────┴────────┘
"
`;

exports[`TableRenderer > handles rows with missing cells 1`] = `
"
┌───────┬──────────┬────────┐
│ Name  │ Role     │ Status │
├───────┼──────────┼────────┤
│ Alice │ Engineer │
│ Bob   │
└───────┴──────────┴────────┘
"
`;

exports[`TableRenderer > renders a 3x3 table correctly 1`] = `
"
┌──────────────┬──────────────┬──────────────┐
│ Header 1     │ Header 2     │ Header 3     │
├──────────────┼──────────────┼──────────────┤
│ Row 1, Col 1 │ Row 1, Col 2 │ Row 1, Col 3 │
│ Row 2, Col 1 │ Row 2, Col 2 │ Row 2, Col 3 │
│ Row 3, Col 1 │ Row 3, Col 2 │ Row 3, Col 3 │
└──────────────┴──────────────┴──────────────┘
"
`;

exports[`TableRenderer > renders a simple table correctly 1`] = `
"
┌─────────┬──────────┬──────────┐
│ Name    │ Role     │ Status   │
├─────────┼──────────┼──────────┤
│ Alice   │ Engineer │ Active   │
│ Bob     │ Designer │ Inactive │
│ Charlie │ Manager  │ Active   │
└─────────┴──────────┴──────────┘
"
`;

exports[`TableRenderer > renders a table with long headers and 4 columns correctly 1`] = `
"
┌──────────────────┬──────────────────┬───────────────────┬──────────────────┐
│ Very Long Col... │ Very Long Col... │ Very Long Colu... │ Very Long Col... │
├──────────────────┼──────────────────┼───────────────────┼──────────────────┤
│ Data 1.1         │ Data 1.2         │ Data 1.3          │ Data 1.4         │
│ Data 2.1         │ Data 2.2         │ Data 2.3          │ Data 2.4         │
│ Data 3.1         │ Data 3.2         │ Data 3.3          │ Data 3.4         │
└──────────────────┴──────────────────┴───────────────────┴──────────────────┘
"
`;

exports[`TableRenderer > truncates content when terminal width is small 1`] = `
"
┌────────┬─────────┬─────────┐
│ Name   │ Role    │ Status  │
├────────┼─────────┼─────────┤
│ Alice  │ Engi... │ Active  │
│ Bob    │ Desi... │ Inac... │
│ Cha... │ Manager │ Active  │
└────────┴─────────┴─────────┘
"
`;

exports[`TableRenderer > truncates long markdown content correctly 1`] = `
"
┌───────────────────────────┬─────┬────┐
│ Name                      │ Rol │ St │
├───────────────────────────┼─────┼────┤
│ Alice with a very long... │ Eng │ Ac │
└───────────────────────────┴─────┴────┘
"
`;
